Randomizer animation and spacing fix on add buttons in user interface

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -145,7 +145,9 @@ p{
     line-height: 22px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  }
-
+#add-user-buttons{
+    margin-left: 0 !important;
+}
 .green-secondary{
     margin-top: 0 !important;
     margin-bottom: 0 !important;
@@ -575,7 +577,7 @@ body{
 }
 
 /* randomizer gif  */
-#rain{
+#rain, #rain-active{
     /*height: 22em;*/
     height: 80%;
     width: 80%;
